[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "An OpenEnv-compliant customer support simulation environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sharag2008-dev" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
customer-support-env = "server.app:main"
openenv-server = "server.app:main"
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[tool.setuptools]
packages = ["env", "server"]